I18n plus several improvements.

--- a/i18n/EtiquetasAkazan_es.properties
+++ b/i18n/EtiquetasAkazan_es.properties
@@ -1,3 +1,22 @@
 # Etiquetas para la aplicación Akazan
 
 Akazan=Akazan
+Purchase=Compra
+PurchaseItem=Item de compra
+Sale=Venta
+SaleItem=Item de Venta
+Supplier=Proveedor
+ProductPriceUpdate=Actualización de precio de producto
+ProductBrand=Marca de producto
+ProductCategory=Categoría de producto
+Address=Dirección
+city=Ciudad
+street=Calle
+number=Número
+apartment=Departamento
+brand=Marca
+line=Linea
+variant=Variante
+saleItems=Items de venta
+purchaseItems=Items de compra
+supplierCode=Código de proveedor
