More translations. PurchasItem bug fixed. Province added to Addres.

--- a/i18n/EtiquetasAkazan_es.properties
+++ b/i18n/EtiquetasAkazan_es.properties
@@ -21,3 +21,4 @@ saleItems=Items de venta
 purchaseItems=Items de compra
 supplierCode=Código de proveedor
 phoneNumber=Teléfono
+province=Provincia
