Added percentageProfit to Product and a calculator for percentageProfit to PurhcaseItem.
Also added purchases tab to Product.

--- a/i18n/EtiquetasAkazan_es.properties
+++ b/i18n/EtiquetasAkazan_es.properties
@@ -22,3 +22,5 @@ purchaseItems=Items de compra
 supplierCode=Código de proveedor
 phoneNumber=Teléfono
 province=Provincia
+purchases=Compras
+lastname=Apellido
